syntax = "proto2";

package scifirpg;
option java_package = "com.eldritch.scifirpg.proto";

import "com/eldritch/scifirpg/proto/prerequisites.proto";
import "com/eldritch/scifirpg/proto/outcomes.proto";

message Location {
	required string id = 1; // unique key
	required string name = 2;
	repeated Encounter encounter = 3;
}

message Encounter {
	enum Type {
		STATIC = 0;
		DECISION = 1;
		ACTOR = 2;
		REGION = 3;
	}

	message StaticParams {
		required string description = 1;
		repeated Outcome outcome = 2;
	}

	// Choices use hard pointers to successor states, so to prevent
	// circular dependencies, these trees must be DAGs
	message DecisionParams {
		// Encounter ends when the player reaches a DecisionState with no choices
		message DecisionState {
			required string description = 1;
			repeated Choice choice = 2;
			repeated Outcome outcome = 3;
		}

		message Choice {
			required string text = 1;
			repeated Prerequisite prereq = 2;
			required DecisionState successor = 3;
		}

		required DecisionState root = 1;
	}

	message ActorParams {
		message ActorScenario {
			required string actor_id = 1;

			// Standard effects are invoked when a player kills an actor:
			//   - Gain inventory items
			//   - Gain experience proportional to their stats
			//   - Faction reputation mod inversely proportional to their standing
			// Additionally, we can set specific triggers in the encounter, like setting
			// the quest stage forward.
			repeated Outcome on_death = 2;
		}

		required string description = 1;
		repeated ActorScenario actor_scenario = 2;

		// Flee attempts are made against all actors collectively, so there is only one outcome
		// for all actors.
		repeated Outcome on_flee = 3;
	}

	optional string id = 1; // unique key
	required string title = 2;
	required Type type = 3;
	required double weight = 4;
	required bool unique = 5 [default = false];
	repeated Prerequisite prereq = 6;

	// Parameters specific to encounter type
	optional StaticParams static_params = 7;
	optional DecisionParams decision_params = 8;
	optional ActorParams actor_params = 9;
	//optional RegionParams region_params = 10;
}
